Made help text a little more descriptive

--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -109,6 +109,7 @@ a {
     &lt;h2>HELLO &lt;span>my name is&lt;/span>&lt;/h2>
     &lt;h3>Rendr.it&lt;/h3>
     &lt;p>To get started, &lt;a href="#" data-reveal-id="new-library" data-animation="fade">create a new library&lt;/a> or check out our &lt;a href="#" data-reveal-id="help" data-anmiation="fade">help page&lt;/a> for some handy tips.&lt;/p>
+    &lt;p>After you create a new library, to start editing you'll need to create a new Rendr or save a copy of this one, using the "New" and "Save" buttons above.&lt;/p>
 &lt;/div>
 </pre>
             </div>
