Added support for changing rendr title in control bar

--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -30,6 +30,10 @@
                     <span class="library-name">(No library loaded)</span>
                     <ul></ul>
                 </div>
+
+                <div id="rendr-title">
+                    <span class="rendr-name"></span>
+                </div>
             </div>
             <div id="preview-ctl">
                 <a href="#" class="button ctl menu radius disabled btn-new-rendr" ><i class="icon-file"></i>&nbsp; New</a>
@@ -262,7 +266,7 @@ a {
         <a href="#" class="button radius btn-options-submit">Save Options</a>
         <a class="close-reveal-modal"><i class="icon-remove-sign"></i></a>
     </div>
-    
+
     <div id="help" class="reveal-modal xlarge">
 
         <h2>Rendr Tips</h2>
