--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -41,7 +41,7 @@
 
                 <ul class="button-group radius">
                     <li><a href="#" class="button ctl active radius live btn-live-preview has-tooltip" title="Live preview"><span><i class="icon-eye-open"></i></span></a></li>
-                    <li><a href="#" class="button ctl rendered btn-rendered-preview has-tooltip" title="Image preview"><span><i class="icon-picture"></i></span></a></li>ƒ
+                    <li><a href="#" class="button ctl rendered btn-rendered-preview has-tooltip" title="Image preview"><span><i class="icon-picture"></i></span></a></li>
                 </ul>
 
                 <div id="url-input">
