Added success message on library load. Closes #6

--- a/rendr/static/css/rendr.it.css
+++ b/rendr/static/css/rendr.it.css
@@ -1168,6 +1168,10 @@ a.button.postfix {
     display: none !important;
 }
 
+#load-library .success .icon-ok-sign {
+    color: #71ca4c;
+}
+
 .tabs {
     border: none;
 }
