--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -157,6 +157,12 @@ a {
             and Secret Key, and try again.</p>
             <a class="close-reveal-modal"><i class="icon-remove-sign"></i></a>
         </div>
+        
+        <div class="success">
+            <h2><i class="icon-ok-sign"></i> Library Loaded</h2>
+            <p class="lead">You have sucessfully loaded your library.</p>
+            <a class="close-reveal-modal"><i class="icon-remove-sign"></i></a>
+        </div>
     </div>
 
     <div id="new-library" class="reveal-modal small">
