--- a/rendr/static/css/rendr.it.css
+++ b/rendr/static/css/rendr.it.css
@@ -1497,3 +1497,7 @@ TOOLTIPS
     border-bottom-color: transparent;
 }
 
+/* Avoid FOUC while angular compiles the template */
+[ng-cloak] {
+   display: none;
+}
