Add unit tests using Jasmine BDD and Karma test runner

--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -51,8 +51,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#" ng-click="previewRendered()" ng-class="{'disabled': editorHasUnsavedChanges() || !app.rendr.rendrId, 'active': app.content.previewMode == 'rendered' && !editorHasUnsavedChanges()}"
-                         class="button ctl rendered btn-rendered-preview " tooltip="Image preview">
+                      <a href="#" ng-click="previewRendered()" ng-class="{'disabled': editorHasUnsavedChanges() || !app.rendr.rendrId, 'active': app.content.previewMode == 'rendered' && !editorHasUnsavedChanges()}" class="button ctl rendered btn-rendered-preview " tooltip="Image preview">
                         <span><i class="icon-picture"></i></span>
                       </a>
                     </li>
