Remove redundant body class

--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="{{ f }}"/>
     {% end %}
 </head>
-<body class="theme-dark" ng-class="options.theme" ng-controller="AppController">
+<body ng-class="options.theme" ng-controller="AppController">
     <form>
         <header>
             <div id="library-ctl">
