Added a short 'getting started' guide to the docs

--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -277,7 +277,7 @@ a {
         <h2>Rendr Tips</h2>
 
         <dl class="tabs three-up">
-            <dd class="active"><a href="#help-library"><i class="icon-book"></i> Libraries</a></dd>
+            <dd class="active"><a href="#help-library"><i class="icon-book"></i> Getting Started</a></dd>
             <dd><a href="#help-code"><i class="icon-pencil"></i> Code Tips</a></dd>
             <dd><a href="#help-result"><i class="icon-download"></i> Parameters</a></dd>
         </dl>
@@ -287,7 +287,16 @@ a {
 
                 <p>Rendr.it enables you to create images based on HTML, CSS and JavaScript snippets, as well as externally-hosted scripts or images. The final image can be customised via URL parameters or query strings.</p>
 
-                <h5>How do I get started?</h5>
+                <h5>The TL;DR guide to Rendr.it</h5>
+                
+                <ul>
+                    <li><b>Create a new Library</b> Just select <br /><kbd>New Library...</kbd> under the Rendr.it menu to create a new one.</li>
+                    <li><b>To edit/create a Rendr:</b> Create a new Rendr, hit the <kbd>New</kbd> button in the menu bar.</li>
+                    <li><b>To use your Rendr:</b> Just copy and paste your Rendr's URL from the address bar on the right of the menu bar.</li>
+                </ul>
+                
+                <h5>Libraries</h5>
+                
                 <p>You'll need to create a new library to store your rendrs. Just select <br /><kbd>New Library...</kbd> under the Rendr.it menu to create one.</p>
                 <p>You can open an existing library by selecting <kbd>Open Library...</kbd> under the Rendr.it menu. It will require your Library ID and Secret Key.</p>
 
