--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -290,9 +290,9 @@ a {
                 <h5>The TL;DR guide to Rendr.it</h5>
                 
                 <ul>
-                    <li><b>Create a new Library</b> Just select <br /><kbd>New Library...</kbd> under the Rendr.it menu to create a new one.</li>
-                    <li><b>To edit/create a Rendr:</b> Create a new Rendr, hit the <kbd>New</kbd> button in the menu bar.</li>
-                    <li><b>To use your Rendr:</b> Just copy and paste your Rendr's URL from the address bar on the right of the menu bar.</li>
+                    <li><b>Create a new Library:</b> Just select <kbd>New Library...</kbd> under the Rendr.it menu to create a new one.</li>
+                    <li><b>To edit/create a Rendr:</b> Create a new Rendr, hit the <kbd>New</kbd> button in the menu bar and start coding.</li>
+                    <li><b>To use your Rendr:</b> Just copy and paste your Rendr's URL from the address bar on the right of the menu bar (see below about publishing using a CDN).</li>
                 </ul>
                 
                 <h5>Libraries</h5>
