More preview size fixes; add IE linear-gradient in default example

--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -93,6 +93,7 @@ div {
     padding: 15px 40px 10px;
     background: -webkit-linear-gradient(top, #ec4f58, #c92c35 31%, #fff 31%, #eee);
     background: -moz-linear-gradient(top, #ec4f58, #c92c35 31%, #fff 31%, #eee);
+    background: -ms-linear-gradient(top, #ec4f58, #c92c35 31%, #fff 31%, #eee);
     background: linear-gradient(top, #ec4f58, #c92c35 31%, #fff 31%, #eee);
     box-shadow: 0 2px 3px 0px rgba(0,0,0,0.3);
     border-radius: 10px;
