Fixed spelling on pop-up.

--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -181,7 +181,7 @@ a {
         
         <div class="success" ng-show="!inprogress && library.key">
             <h2><i class="icon-ok-sign"></i> Library Loaded</h2>
-            <p class="lead">You have sucessfully loaded your library.</p>
+            <p class="lead">You have successfully loaded your library.</p>
             <a class="close-reveal-modal"><i class="icon-remove-sign"></i></a>
         </div>
     </div>
